--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <h1>Felipe's github page</h1>
   <p>QA journey and testing site.</p>
 
-  <a href="page2.html">Page 2</a>
+  <a href="/neo-pgd/page2.html">Page 2</a>
 
 </body>
 </html>
