--- a/page2.html
+++ b/page2.html
@@ -5,7 +5,7 @@
   <h1>Second page title</h1>
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab nesciunt sed architecto voluptatem saepe aspernatur maiores reprehenderit exercitationem aliquam iusto minima eveniet corporis, recusandae nostrum nihil praesentium impedit. Quasi, libero!</p>
 
-  <a href="/">Home</a>
+  <a href="/neo-pgd">Home</a>
   
 
 </body>
